[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "verystable"
description = "Tools for experimenting with Bitcoin Core"
readme = "README.md"
version = "25.99.0-dev"
dependencies = [
    'importlib-metadata; python_version<"3.11"',
]

[project.optional-dependencies]
tests = [
    'pytest',
    'mypy',
    'ruff',
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ignore=verystable/core"
python_files = ["*.py"]
python_functions = ["pytest_*", "_pytest_*"]

[tool.ruff]
exclude = ["verystable/core"]
line-length = 88
ignore-init-module-imports = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
